# langner

./: .gitignore  .pdm-python  CLAUDE.md  LICENSE  Makefile  README.md  books.example.yml  buf.gen.backend.yaml  buf.gen.frontend.yaml  buf.gen.testrunner.yaml  buf.gen.yaml  compose.yml  config.e2e.yml  config.example.yml  config.test.yml  friendss3e9.txt  go.mod  go.sum  go.work  go.work.sum  pyproject.toml
.claude/agents/: openai-prompt-optimizer.md
.claude/commands/: update-openai-prompt.md
.claude/docs/: architecture.md  coding_standards.md
.github/workflows/: backend.yml  frontend.yml  pr.yml
backend/: Makefile  go.mod  go.sum
backend/schemas/: embed.go
browser/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wxt.config.ts
browser/entrypoints/: interceptor.content.ts
browser/src/: types.ts
browser/test-fixtures/: youtube-no-transcript.html  youtube-view-model-segments.html  youtube-with-chapters.html  youtube-without-chapters.html
cmd/langner/: analyze.go  analyze_test.go  datasync.go  dictionary.go  dictionary_test.go  ebook.go  ebook_test.go  helpers.go  main.go  main_test.go  notebook.go  parse.go  (+7 more)
cmd/langner-server/: main.go
docs/: .gitignore  hugo.toml
frontend/: .env.local  Makefile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
schemas/: embed.go  schema.sql
scripts/: update-claude-oauth-token.sh
src/: video_to_langner_notebook.py
(+683 files in other folders)
